# dreamstack-contracts

./: .all-contributorsrc  .gitignore  CMakeLists.txt  README.md
contracts/: CMakeLists.txt
contracts/demodemodemo/: CMakeLists.txt  demodemodemo.cpp  demodemodemo.hpp
include/: teloscontracts.hpp
src/: CMakeLists.txt  teloscontracts.cpp
